--- a/projects.json
+++ b/projects.json
@@ -2,7 +2,7 @@
   "general": [
     {
       "title": "Portfolio Website (Netlify + Cloudflare)",
-      "description": "This site: static frontend deployed on Netlify with Cloudflare for DNS/TLS/WAF/caching. Includes rate limiting, managed challenge on PDF endpoints, strict security headers, and a Netlify function that surfaces Cloudflare analytics.",
+      "description": "This site: static frontend on Netlify with Cloudflare in front (DNS/TLS/WAF/caching). Includes a Netlify Function that queries Cloudflare GraphQL Analytics to display live stats.",
       "image": "assets/images/projects/placeholder-project.webp",
       "tags": [
         "Web",
@@ -13,46 +13,45 @@
         "Cloudflare",
         "DNS",
         "WAF",
-        "TLS",
-        "CI/CD"
+        "TLS"
       ]
     },
     {
       "title": "Custom PC Build",
-      "description": "Workstation PC planning and build. UEFI configuration with Secure Boot and TPM enabled, BitLocker full-disk encryption, thermal validation, and clean OS with driver hardening.",
+      "description": "Planned and assembled a high\u2011performance workstation. Optimized UEFI, enabled Secure Boot/TPM, tuned airflow and cable management, and validated thermals/stability.",
       "image": "assets/images/projects/pc-build.webp",
+      "imageFallback": "assets/images/projects/pc-build.jpg",
       "tags": [
         "Hardware",
         "PC Build",
+        "Cooling",
         "Windows",
-        "UEFI",
-        "Secure Boot",
-        "TPM",
-        "Misc"
+        "UEFI"
       ]
     }
   ],
   "security": [
     {
-      "title": "CTF Lab: Web Exploitation",
-      "description": "Small DVWA/juice-shop styled lab for practicing input validation, auth bypass and IDOR.",
-      "image": "assets/images/projects/placeholder-project.webp",
-      "tags": [
-        "Security \u2014 Offense",
-        "Web",
-        "Scripting",
-        "Misc"
-      ]
-    },
-    {
       "title": "Blue Team: SIEM + WAF Detections",
-      "description": "Created Sigma-style detection rules and WAF rules to detect/mitigate common web attacks.",
+      "description": "Created Sigma\u2011style SIEM rules and Cloudflare WAF rules to detect and mitigate common web attacks; tested alerts with synthetic events.",
       "image": "assets/images/projects/placeholder-project.webp",
       "tags": [
         "Security \u2014 Defense",
         "Cloudflare",
         "WAF",
-        "Tooling/DevOps"
+        "SIEM",
+        "Detections"
+      ]
+    },
+    {
+      "title": "Red Team: Recon & Phishing Lab",
+      "description": "Built a small lab to practice OSINT recon, payload delivery, and detection evasion against blue\u2011team rules (for educational purposes only).",
+      "image": "assets/images/projects/placeholder-project.webp",
+      "tags": [
+        "Security \u2014 Offense",
+        "OSINT",
+        "Phishing",
+        "OPSEC"
       ]
     }
   ]
