--- a/projects.json
+++ b/projects.json
@@ -1,64 +1,59 @@
 {
   "general": [
     {
-      "id": "portfolio-website",
       "title": "Portfolio Website (Netlify + Cloudflare)",
+      "description": "This site: static frontend deployed on Netlify with Cloudflare for DNS/TLS/WAF/caching. Includes rate limiting, managed challenge on PDF endpoints, strict security headers, and a Netlify function that surfaces Cloudflare analytics.",
       "image": "assets/images/projects/placeholder-project.webp",
-      "summary": "Static site hosted on Netlify with Cloudflare proxy/WAF, serverless functions, and analytics.",
       "tags": [
+        "Web",
         "HTML",
         "CSS",
         "JavaScript",
         "Netlify",
-        "Cloudflare"
-      ],
-      "links": [
-        {
-          "label": "GitHub",
-          "url": "https://github.com/caungst38/portfolio-site"
-        }
+        "Cloudflare",
+        "DNS",
+        "WAF",
+        "TLS",
+        "CI/CD"
       ]
     },
     {
-      "id": "custom-pc-build",
       "title": "Custom PC Build",
+      "description": "Workstation PC planning and build. UEFI configuration with Secure Boot and TPM enabled, BitLocker full-disk encryption, thermal validation, and clean OS with driver hardening.",
       "image": "assets/images/projects/pc-build.webp",
-      "summary": "High-performance workstation build for security labs and content workflows.",
       "tags": [
         "Hardware",
-        "Workstation",
+        "PC Build",
         "Windows",
-        "Build Log"
-      ],
-      "links": []
+        "UEFI",
+        "Secure Boot",
+        "TPM",
+        "Misc"
+      ]
     }
   ],
   "security": [
     {
-      "id": "blue-team-siem-waf",
-      "title": "Blue Team: SIEM + WAF Detections",
+      "title": "CTF Lab: Web Exploitation",
+      "description": "Small DVWA/juice-shop styled lab for practicing input validation, auth bypass and IDOR.",
       "image": "assets/images/projects/placeholder-project.webp",
-      "summary": "Playbooks and detections across WAF events and SIEM correlation rules.",
       "tags": [
-        "Blue Team",
-        "WAF",
-        "SIEM",
-        "Detections"
-      ],
-      "links": []
+        "Security \u2014 Offense",
+        "Web",
+        "Scripting",
+        "Misc"
+      ]
     },
     {
-      "id": "red-team-recon-phish",
-      "title": "Red Team: Recon & Phishing Lab",
+      "title": "Blue Team: SIEM + WAF Detections",
+      "description": "Created Sigma-style detection rules and WAF rules to detect/mitigate common web attacks.",
       "image": "assets/images/projects/placeholder-project.webp",
-      "summary": "Reconnaissance and phishing simulation lab with safe, controlled targets.",
       "tags": [
-        "Red Team",
-        "Recon",
-        "Phishing",
-        "OPSEC"
-      ],
-      "links": []
+        "Security \u2014 Defense",
+        "Cloudflare",
+        "WAF",
+        "Tooling/DevOps"
+      ]
     }
   ]
 }
