--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,8 @@
+
 [build]
   publish = "."
-  functions = "netlify/functions"
+  command = ""
+
+[functions]
+  directory = "netlify/functions"
+  node_bundler = "esbuild"
