--- a/netlify.toml
+++ b/netlify.toml
@@ -1,8 +1,3 @@
-
 [build]
   publish = "."
-  command = ""
-
-[functions]
-  directory = "netlify/functions"
-  node_bundler = "esbuild"
+  functions = "netlify/functions"
